User list additions and startup status changes

--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -26,7 +26,7 @@
   </head>
   <body>
     <noscript>Out-of-the-box mid-stage front/design solution!</noscript>
-    <script src="echarts.min.js"></script>
+    <!-- <script src="echarts.min.js"></script> -->
     <div id="root">
       <style>
         html,
